--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>Lakes Sidescroller</title>
+        <title>Retro Sidescroller</title>
         <link rel="stylesheet" href="index.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Fondamento&display=swap" rel="stylesheet">
@@ -9,12 +9,18 @@
     <body>
         <div id="app">
             <div class="game-screen" rel="gameScreen" tabindex="0" v-on:keyup.left="movePlayerLeft(player)" v-on:keyup.right="movePlayerRight(player)" v-on:keyup.down="movePlayerDown(player)" v-on:keyup.up="movePlayerUp(player)">
-                <h1 v-if="!gameStarted" v-on:click="gameStarted = true" class="clickable-text">Click to Play</h1>
+                <div v-if="!gameStarted" class="info-panel">
+                    <h1 v-on:click="gameStarted = true" class="clickable-text fancy-text play-btn">Click to Play</h1>
+                    <p class="fancy-text instructions">Use arrow keys to move.</p>
+                    <p class="fancy-text instructions">Collect all the jewels.</p>
+                    <p class="fancy-text instructions">Avoid dark ocean water.</p>
+                </div>
                 <div v-for="row in screenSize" class="row">
                     <div v-for="col in screenSize" class="square">
-                        <img :src="matrix[row + screenYOffset][col + screenXOffset] === 0 ? '../resources/water_small.png' : '../resources/land_small.png'" class="sprite">
-                        <img v-if="row + screenYOffset === player.yCoord && col + screenXOffset === player.xCoord" src="../resources/sprite.png" class="sprite">
-                    </div>
+                        <img v-if="shouldDrawLake(col + screenXOffset, row + screenYOffset)" src="../resources/water_small.png" class="sprite sprite-large">
+                        <img v-if="shouldDrawLand(col + screenXOffset, row + screenYOffset)" src="../resources/land_small.png" class="sprite sprite-large">
+                        <img v-if="shouldDrawCoin(col + screenXOffset, row + screenYOffset)" src="../resources/coin.png" class="sprite sprite-small">
+                        <img v-if="shouldDrawPlayer(player, col + screenXOffset, row + screenYOffset)" src="../resources/sprite.png" class="sprite sprite-large">                    </div>
                 </div>
             </div>
         </div>
