Add status bar for health and coins

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,27 @@
             <div class="game-screen" rel="gameScreen" tabindex="0" v-on:keyup.left="movePlayerLeft(player)" v-on:keyup.right="movePlayerRight(player)" v-on:keyup.down="movePlayerDown(player)" v-on:keyup.up="movePlayerUp(player)">
                 <div v-if="!gameStarted" class="info-panel">
                     <h1 v-on:click="gameStarted = true" class="clickable-text fancy-text play-btn">Click to Play</h1>
-                    <p class="fancy-text instructions">Use arrow keys to move.</p>
-                    <p class="fancy-text instructions">Collect all the jewels.</p>
+                    <p class="fancy-text instructions">Collect all the gold.</p>
                     <p class="fancy-text instructions">Avoid dark ocean water.</p>
+                    <p class="fancy-text instructions">Use arrow keys to move.</p>
                 </div>
                 <div v-for="row in screenSize" class="row">
                     <div v-for="col in screenSize" class="square">
                         <img v-if="shouldDrawLake(col + gameData.screenXOffset, row + gameData.screenYOffset)" src="../resources/water_small.png" class="sprite sprite-large">
                         <img v-if="shouldDrawLand(col + gameData.screenXOffset, row + gameData.screenYOffset)" src="../resources/land_small.png" class="sprite sprite-large">
-                        <img v-if="shouldDrawCoin(col + gameData.screenXOffset, row + gameData.screenYOffset)" src="../resources/coin.png" class="sprite sprite-small">
+                        <img v-if="shouldDrawCoin(col + gameData.screenXOffset, row + gameData.screenYOffset)" src="../resources/coin.png" class="sprite sprite-small sprite-centered">
                         <img v-if="shouldDrawPlayer(player, col + gameData.screenXOffset, row + gameData.screenYOffset)" src="../resources/sprite.png" class="sprite sprite-large">
+                    </div>
+                </div>
+                <div class="status-bar">
+                    <div class="coin-status">
+                        <img src="../resources/coin.png" class="sprite-small">
+                        <p class="fancy-text coin-text">
+                            {{player.numCoins}}/{{gameData.totalNumCoins}}
+                        </p>
+                    </div>
+                    <div class="health-status">
+                        <img v-for="n in player.health" src="../resources/heart.png" class="sprite-small">
                     </div>
                 </div>
             </div>
